网络框架 屏幕适配 依赖整理 页面逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="a_key_login">一键登陆测试</string>
     <string name="online_pay_test">在线支付测试</string>
     <string name="nfc_pay_test">NFC支付测试</string>
+    <string name="pay">支付</string>
 </resources>
