--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,20 @@
     <string name="app_name">终端基础安全测试</string>
     <string name="a_key_to_login">一键登录</string>
     <string name="_5g_message_security_tests">5G消息安全测试</string>
+    <string name="image_encrypt_or_decrypt">图片加解密</string>
     <string name="encrypt_or_decrypt">5G消息加解密</string>
     <string name="online_pay">在线支付</string>
     <string name="nfc_pay">NFC支付</string>
+    <string name="button1">选择图片</string>
+    <string name="button2">删除</string>
     <string name="encryption">5G消息加密</string>
     <string name="decryption">本地5G消息解密</string>
+    <string name="image_encryption">图片加密</string>
+    <string name="image_decryption">图片解密</string>
     <string name="test_based_on_SIM_card">基于SIM卡的终端基础安全能力演示</string>
     <string name="test_5g_msg">5G消息测试</string>
-    <string name="a_key_login">一键登陆测试</string>
+    <string name="_5g_msg">5G消息支付</string>
+    <string name="a_key_login">一键登录测试</string>
     <string name="online_pay_test">在线支付测试</string>
     <string name="nfc_pay_test">NFC支付测试</string>
     <string name="pay">支付</string>
